Added project structure and files for filestorage

--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-LNMM998\\SQLEXPRESS;Database=FileStorageService;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "Issuer": "https://localhost:44306/",
+    "Audience": "https://localhost:44306/",
+    "Key": "thisisasecretkeyanditshouldbelongandsecure",
+    "TokenValidityInMinutes": 60
+  }
 }
