--- a/FileStorageAPIApp/FileStorage.Application/FileStorage.Application.csproj
+++ b/FileStorageAPIApp/FileStorage.Application/FileStorage.Application.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FileStorage.Domain\FileStorage.Domain.csproj" />
   </ItemGroup>
 
 </Project>
