created APIs for filestorage, impelmented local filestorage system

--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -9,10 +9,25 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-LNMM998\\SQLEXPRESS;Database=FileStorageService;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "Storage": {
+    "BaseFilePath": "_storage" // Base folder for all uploaded files
+  },
   "JwtSettings": {
     "Issuer": "https://localhost:44306/",
     "Audience": "https://localhost:44306/",
     "Key": "thisisasecretkeyanditshouldbelongandsecure",
     "TokenValidityInMinutes": 60
-  }
+  },
+  "Users": [
+    {
+      "Username": "admin",
+      "Password": "admin123",
+      "Role": "Admin"
+    },
+    {
+      "Username": "user",
+      "Password": "user123",
+      "Role": "User"
+    }
+  ]
 }
