Added health check implementation

--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=DESKTOP-LNMM998\\SQLEXPRESS;Database=FileStorageService;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Storage": {
-    "BaseFilePath": "_storage" // Base folder for all uploaded files
+    "BaseFilePath": "_storage" 
   },
   "JwtSettings": {
     "Issuer": "https://localhost:44306/",
