--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -9,8 +9,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-LNMM998\\SQLEXPRESS;Database=FileStorageService;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "Storage": {
-    "BaseFilePath": "_storage" 
+  "FileStorage": {
+    "BaseFilePath": "_storage",
+    "FileName": "content.bin",
+    "MetaFile": "metadata.json",
+    "AllowedContentTypes": [
+      "application/pdf",
+      "image/png",
+      "image/jpeg"
+    ]
   },
   "JwtSettings": {
     "Issuer": "https://localhost:44306/",
