--- a/FileStorageAPIApp/FileStorage.API/FileStorage.API.csproj
+++ b/FileStorageAPIApp/FileStorage.API/FileStorage.API.csproj
@@ -14,6 +14,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
@@ -21,6 +25,10 @@
     <ProjectReference Include="..\FileStorage.Application\FileStorage.Application.csproj" />
     <ProjectReference Include="..\FileStorage.Domain\FileStorage.Domain.csproj" />
     <ProjectReference Include="..\FileStorage.Infrastructure\FileStorage.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="_storage\" />
   </ItemGroup>
 
 </Project>
