--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -5,6 +5,31 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "Properties": { "Application": "FileStorage.API" },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs\\DATE\\log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} CorrelationId={CorrelationId}{NewLine}{Exception}",
+          "retainedFileCountLimit": 14,
+          "shared": true
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-LNMM998\\SQLEXPRESS;Database=FileStorageService;Trusted_Connection=True;TrustServerCertificate=True"
