added some validations

--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -35,6 +35,7 @@
     "DefaultConnection": "Server=DESKTOP-LNMM998\\SQLEXPRESS;Database=FileStorageService;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "FileStorage": {
+    "MaxFileSizeMB": "200",
     "BaseFilePath": "_storage",
     "FileName": "content.bin",
     "MetaFile": "metadata.json",
