--- a/FileStorageAPIApp/FileStorage.API/appsettings.json
+++ b/FileStorageAPIApp/FileStorage.API/appsettings.json
@@ -21,7 +21,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs\\DATE\\log-.txt",
+          "path": "Logs/DATE/log-.txt",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj} CorrelationId={CorrelationId}{NewLine}{Exception}",
           "retainedFileCountLimit": 14,
